--- a/style.css
+++ b/style.css
@@ -3660,21 +3660,25 @@ thead.fc-border th:last-child {
 .fencing-modal .fc-color-options {
   padding: 32px 24px;
   box-sizing: border-box;
+  overflow: hidden;
+}
+@media (max-width: 992px) {
+  .fencing-modal .fc-color-options {
+    margin-bottom: 0 !important;
+  }
 }
 .fencing-modal .fc-color-options .fc-col-3 {
   width: 31.3%;
   margin-right: 0;
   box-sizing: border-box;
-  padding-left: 0;
-  padding-right: 0;
+  padding: 0;
   margin-right: 2%;
 }
-@media (max-width: 992px) {
+@media (max-width: 768px) {
   .fencing-modal .fc-color-options .fc-col-3 {
     width: 100%;
     margin-bottom: 10px;
     margin-right: 0;
-    padding: 0;
     float: none;
   }
 }
